# adis

./: .gitignore  README.md  example_adis_to_json.py  example_json_to_adis.py  sample.ads  sample.json  setup.cfg  test_sample.py
adis/: __init__.py  adis.py  adis_block.py  adis_field_definition.py  adis_file.py  adis_lines.py  adis_value.py
adis_aded_parser/: __init__.py  adis_block.py  adis_field_definition.py  adis_file.py  adis_lines.py  adis_value.py  item_field_parser.py
adis_parser/: __init__.py  adis_block.py  adis_field_definition.py  adis_file.py
