[metadata]
name = adis-parser
version = 0.0.1
author = smaXtec
author_email = support@smaxtec.com
description = A package for parsing ADIS files or creating new files in the ADIS format.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/smaxtec/adis-parser
project_urls =
    Bug Tracker = https://github.com/smaxtec/adis-parser/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: LGPL-3.0
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.8

[options.packages.find]
where = .