[metadata]
name = adis
version = 0.0.1b1
author = smaXtec
author_email = support@smaxtec.com
license = LGPLv3
description = A package for parsing ADIS files or creating new files in the ADIS format.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/smaxtec/adis
project_urls =
    Bug Tracker = https://github.com/smaxtec/adis/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.8

[options.packages.find]
where = .
